--- a/exercises/fetch-exercise/index.html
+++ b/exercises/fetch-exercise/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <h1>A greeting in a random language...</h1>
+  <h1>Welcome</h1>
   <p id="greeting-text"></p>
 
   <script src="exercise.js"></script>
